--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p {
 a {
     text-decoration: none;
     position: relative;
+    transition: opacity 300ms ease;
 }
 
 li {
@@ -172,10 +173,26 @@ flex-direction: column;
     box-shadow:0 8px 16px rgba(0, 0, 0);
     background-color:#5b5b64 ;
     margin-bottom: 28px;
+    animation: animate-profile-picture 800ms 200ms backwards;
+    
+}
+
+@keyframes animate-profile-picture {
+    0% {
+        transform: scale(0);
+    }
+
+    80% {
+        transform:scale(1.1);
+    }
+
+    100% {
+        transform:scale(1);
+    }
 }
 
 .about-me__picture {
-    width: 90%;
+    width: 100%;
     
 
 
@@ -194,6 +211,7 @@ flex-direction: column;
 
 .about-me__info--title {
     margin-bottom: 16px;
+    animation: fade-up 650ms 400ms backwards;
 }
 
 .about-me__link {
@@ -201,6 +219,21 @@ flex-direction: column;
     color:black;
     text-decoration: none;
     padding:0 16px;
+}
+
+.about-me__links {
+animation: fade-up 650ms 800ms backwards;
+}
+
+@keyframes fade-up {
+    0% {
+        opacity:0;
+        transform: translatey(40px);
+    }
+    100% {
+        transform: translateY(0px);
+        opacity:1;
+    }
 }
 
 .about-me__img--container {
@@ -213,6 +246,35 @@ flex-direction: column;
 .about-me__img {
     width :100%;
     margin: 96px 0;
+    animation: fade-in 1200ms 800ms backwards;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+.wave {
+animation: animate-wave 500ms infinite ease-in-out;
+display: inline-block;
+}
+
+@keyframes animate-wave {
+0% {
+    transform: rotate(0);
+
+}
+50% {
+    transform: rotate(30deg);
+}
+
+100% {
+    transform: rotate(0);
+}
 }
 
 /* TECH - STACK */
@@ -437,31 +499,33 @@ h1 {
 }
 
 @media (max-width:480px) {
-    nav {
-        height:68px;
-    
+    .nav__link:not(:last-child) {
+        display: none;
     }
-    
-    h1 {
-        font-size:28px;
-    }
-    
-    .about-me__info--para {
-        font-size:18px;
-    }
-    
-    .language {
-        width:50%;
-    }
+
     .project__description--para {
-        font-size:14px;
-    
+        display: none;
     }
     
-    .project__description {
-        left:30px;
-        padding-right:30px;
+    .project__description--links {
+        display: flex;
+        justify-content: center;
     }
-    
-    
+
+    .project__description--sub-title {
+        text-align: center;
+        margin:12px 0;
+    }
+
+    .project__description--title {
+        line-height: 1;
+        font-size: 32px;
+        text-align: center;
+    }
+.project__description {
+    padding:0;
+    left:0;
+    width:100%;
+}
+
     }
